# pi-intercom

./: .gitignore  README.md  pyproject.toml  requirements.in.txt  requirements.txt  session_setup.py  setup-session.py  setup.py
.github/workflows/: pylint.yml
ansible/: debug.yml  install.yml
ansible/host_vars/: sample.yml
ansible/templates/: asoundrc.j2  config.yaml.j2  intercompy.service.j2
examples/: sample-config.yml
intercompy/: __init__.py  audio.py  command.py  config.py  convo.py  gpio.py  selftest.py  text.py  tracing.py  util.py
